# urban-flow

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  data_pipeline.py  evaluation.py  utils.py  visualization.py
app/classic/: __init__.py  baselines.py  main.py  spatiotemporal_gru.py  univariate_gru.py  xgboost_model.py
app/eda/: main.py
app/lightning_logs/version_0/: hparams.yaml  metrics.csv
app/lightning_logs/version_1/: metrics.csv
app/lightning_logs/version_4/: hparams.yaml
app/models/: mc_dropout_gru_j1.pt  mc_dropout_gru_j2.pt  mc_dropout_gru_j3.pt  mc_dropout_gru_j4.pt  spatiotemporal_gru.pt  uni_gru_j1.pt  uni_gru_j2.pt  uni_gru_j3.pt  uni_gru_j4.pt
app/results/classic/: classic_comparison.csv
app/results/eda/: eda_descriptive_stats.csv  eda_outliers.csv  eda_stationarity_tests.csv
app/results/sota/: full_comparison.csv  tft_results.csv
app/results/uncertainty/: uncertainty_comparison.csv
app/sota/: __init__.py  main.py  tft_model.py
app/uncertainty/: __init__.py  main.py  mc_dropout_gru.py  quantile_tft.py  quantile_xgboost.py
basic/: traffic-analyzer.ipynb  traffic-analyzer.py
